Update unit tests for ElasticsearchBinaryFileWithMetadataBatchIndexer